Added readme and license details

--- a/Firefox/package.json
+++ b/Firefox/package.json
@@ -4,6 +4,6 @@
   "id": "jid1-xZGPRm5uFAr5cw",
   "description": "Provides enhanced appearance for the popular Hungarian website SG.hu.",
   "author": "Peter Viszt & John Gera",
-  "license": "MPL 2.0",
+  "license": "MIT",
   "version": "0.1.0"
 }
