Added extension icon to Chrome

--- a/Chrome/manifest.json
+++ b/Chrome/manifest.json
@@ -10,11 +10,12 @@
 	"default_locale": "hu",
 	"minimum_chrome_version": "22",
 
-	// "icons": { 
-	// 	"16": "/img/icon16.png",
-	// 	"48": "/img/icon48.png",
-	// 	"128": "/img/icon128.png"
-	// },
+	"icons": { 
+		"16": "/img/icon16.png",
+		"32": "/img/icon32.png",
+		"48": "/img/icon48.png",
+		"128": "/img/icon128.png"
+	},
 
 	"background": {
 		"scripts": ["/js/eventPage.js"],
