Added private browsing support for Firefox

--- a/Firefox/package.json
+++ b/Firefox/package.json
@@ -3,6 +3,7 @@
   "title": "SG++",
   "id": "jid1-xZGPRm5uFAr5cw",
   "description": "Provides enhanced appearance for the popular Hungarian website SG.hu.",
+  "permissions": { "private-browsing": true },
   "icon": "data/img/icon48.png",
   "icon64": "data/img/icon64.png",
   "author": "Peter Viszt & John Gera",
